# lightweight

./: .gitignore  .pylintrc  CIFAR10.py  index.html  pyproject.toml  requirements-mac.txt  requirements_old.txt  setup.py  train_cifar10.py
Ideas/: Workplan.docx
scripts/: eval.py  train.py  verify_env.py  verify_mps.py  verify_onnx.py
src/: config.py
src/common/: device.py
src/data/: cifar10.py
src/engine/: evaluate.py  train.py
src/models/: resnet.py
src/utils/: device.py  meter.py  seed.py
