[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lightweight"
version = "0.1.0"
description = "Lightweight deep learning framework"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "torch>=2.0.0",
    "tqdm",
    "numpy",
    "pillow",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "scripts*"]

[tool.setuptools.package-dir]
"" = "."

[tool.pylsp-mypy]
enabled = true
live_mode = true
strict = true

[tool.pyright]
include = ["src", "scripts"]
exclude = ["**/node_modules", "**/__pycache__"]
pythonVersion = "3.8"
pythonPlatform = "All"
typeCheckingMode = "basic"
useLibraryCodeForTypes = true
autoSearchPaths = true
extraPaths = ["src"]
